# torch_example

./: .gitignore  datasets.py  netz.py  pyproject.toml  test.py  train.py
