[tool.poetry]
name = "torch_example"
version = "0.1.0"
description = ""
authors = ["Kazuki <Tsuda>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.6.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
